pastrBasic has merged pastr and soldier code
it also is pretty good right now! :D